[workspace]
resolver = "2"
members = [
  "crates/faststreams",
  "crates/geyser-plugin-ultra",
  "crates/ultra-aggregator",
  "crates/ys-consumer",
  "crates/jito-client",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Numan <noreply@example.com>"]

[workspace.dependencies]
anyhow = "1.0.91"
thiserror = "1.0.64"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
bincode = "1.3.3"
bytes = "1.7.1"
parking_lot = "0.12.3"
crossbeam-channel = "0.5.13"
crossbeam-queue = "0.3.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
time = { version = "0.3.36", features = ["formatting"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"
