[package]
name = "faststreams"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
serde_bytes = "0.11.19"
thiserror = { workspace = true }
lz4_flex = { version = "0.11.3", default-features = false, features = ["std"] }