[package]
name = "faststreams"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
serde_bytes = "0.11.19"
thiserror = { workspace = true }
lz4_flex = { version = "0.11.3", default-features = false, features = ["std"] }
smallvec = "1.13"

[features]
default = ["rkyv"]
rkyv = ["dep:rkyv", "dep:bytecheck"]

[dependencies.rkyv]
version = "0.7"
optional = true
features = ["validation"]

[dependencies.bytecheck]
version = "0.6"
optional = true

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "encode_decode"
harness = false

[[bench]]
name = "vectored_write"
harness = false