[package]
name = "geyser-plugin-ultra"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
faststreams = { path = "../faststreams" }
# Solana Geyser interface pinned to current series (Agave/1.18.x)
solana-geyser-plugin-interface = "1.18.26"
solana-transaction-status = "1.18.26"
solana-sdk = "1.18.26"

[dependencies.metrics]
version = "0.23.0"

[dependencies.metrics-exporter-prometheus]
version = "0.15.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["uio"] }