[package]
name = "geyser-plugin-ultra"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = "0.8"
parking_lot = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
faststreams = { path = "../faststreams" }
log = "0.4.28"
socket2 = { version = "0.5.7", features = ["all"] }
smallvec = "1.13"
# Agave Geyser interface with latest versions
agave-geyser-plugin-interface = "3.0.8"
solana-transaction-status = "3.0.8"
solana-sdk = "3.0.0"
core_affinity = "0.8"

[dependencies.metrics]
version = "0.23.0"

[dependencies.metrics-exporter-prometheus]
version = "0.15.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["uio"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.12"