[package]
name = "solana-ultra-rpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
arc-swap = { workspace = true }
hashbrown = { workspace = true }
quinn = { workspace = true }
simd-json = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
prometheus = { workspace = true }
axum = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
bytesize = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "io-util"] }
futures = "0.3.30"
solana-sdk = "3.0.0"
solana-transaction-status = "3.0.8"
dashmap = "5.5.3"
parking_lot_core = "0.9"
metrics = "0.21"
