[package]
name = "solana-validator-observer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
ebpf = ["dep:aya", "dep:aya-log"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "fs", "net", "time"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
prometheus = "0.13"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
dashmap = "5.5"
pprof = { version = "0.13", features = ["flamegraph"] }
futures = "0.3"
rand = "0.8"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
once_cell = "1.20"
serde_with = "3.11"
humantime = "2.1"
url = { version = "2.5", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[target.'cfg(unix)'.dependencies]

[target.'cfg(target_os = "linux")'.dependencies.aya]
version = "0.12"
optional = true
features = ["async_tokio"]

[target.'cfg(target_os = "linux")'.dependencies."aya-log"]
version = "0.1"
optional = true
