[package]
name = "ultra-rpc-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
bytes = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
faststreams = { path = "../faststreams" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = "0.23.1"
metrics-exporter-prometheus = "0.15.3"
clap = { version = "4.5.20", features = ["derive"] }
socket2 = "0.5"
serde_json = { workspace = true }
futures-util = "0.3.31"

